working on sensor modal threshold - it is working just make it better

--- a/IoT_AutonomousFarm/ui/webApp/css/sensors.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/sensors.css
@@ -217,7 +217,7 @@ h6 {
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
-#set-threshold-button {
+.treshbtn {
 	background-color: rgba(255, 255, 255, 0.06);
 	-webkit-backdrop-filter: blur(20px);
 	backdrop-filter: blur(20px);
