background pic fixed + add NPK threshold setting & checking if the numbers are acceptable in the given domain

--- a/IoT_AutonomousFarm/ui/webApp/css/greenhouses.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/greenhouses.css
@@ -14,7 +14,7 @@
 
   body {
     padding: 20px;
-    background: url(https://dl.dropbox.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1)
+    background: url(../pics/background.jpg)
       no-repeat center center fixed;  
     font-family: 'Lato', sans-serif;
     background-size: cover;
