working on add greenhouse method

--- a/IoT_AutonomousFarm/ui/webApp/css/sensors.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/sensors.css
@@ -298,7 +298,7 @@ input{
     font-weight: bold;
 }
 
-#add-plant-btn{
+#add-sensor-btn{
 	padding: 10px 20px;
     font-size: 1.4rem;
     font-weight: bold;
@@ -311,8 +311,10 @@ input{
 }
 
 
-#add-plant-btn:hover {
+#add-sensor-btn:hover {
     /* background: linear-gradient(45deg, #23a2f6, #1845ad); */
     transform: translateY(-2px);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
 }
+
+
