--- a/IoT_AutonomousFarm/ui/webApp/css/greenhouses.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/greenhouses.css
@@ -14,8 +14,10 @@
 
   body {
     padding: 20px;
-    background: url(../pics/background.jpg)
-      no-repeat center center fixed;  
+    background-color: #D6CC99;
+    /* background: url(../pics/background.jpg)
+      no-repeat center center fixed;   */
+
     font-family: 'Lato', sans-serif;
     background-size: cover;
     font-size: 1.6rem;
@@ -31,7 +33,7 @@
     left: 0;
     width: 100%;
     height: 80px;
-    background: linear-gradient(to right, #1845ad, #23a2f6);
+    background: linear-gradient(to right, #445D48, #001524);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -227,8 +229,8 @@
   a {
     display: block;
     text-align: center;
-    margin-top: 20px;
-    font-size: 1.4rem;
+    /* margin-top: 20px; */
+    /* font-size: 1.4rem; */
     color: #ffffff;
     text-decoration: none;
   }
@@ -246,4 +248,69 @@
 
   .arrow-icon:hover path:nth-child(2) {
     transform: translateX(4px);
+  }
+
+
+  /* nav style */
+
+  ul{
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    margin: auto;
+    max-width: 1000px;
+    justify-content: space-between;
+    text-align: center;
+  }
+  li {
+    padding: 1rem 2rem 1.15rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: #ebebeb;
+    min-width: 80px;
+    margin: auto;
+  }
+  
+  li:hover {
+    background-image: url('https://scottyzen.sirv.com/Images/v/button.png');
+    background-size: 100% 100%;
+    color: #27262c;
+    animation: spring 300ms ease-out;
+    text-shadow: 0 -1px 0 #ef816c;
+    font-weight: bold;
+  }
+  li:active {
+    transform: translateY(4px);
+  }
+  
+  @keyframes spring {
+    15% {
+      -webkit-transform-origin: center center;
+      -webkit-transform: scale(1.2, 1.1);
+    }
+    40% {
+      -webkit-transform-origin: center center;
+      -webkit-transform: scale(0.95, 0.95);
+    }
+    75% {
+      -webkit-transform-origin: center center;
+      -webkit-transform: scale(1.05, 1);
+    }
+    100% {
+      -webkit-transform-origin: center center;
+      -webkit-transform: scale(1, 1);
+    }
+  }
+  
+  .shameless-plug{
+    position: absolute;
+    bottom: 10px;
+    right: 0;
+    padding: 8px 20px;
+    color: #ccc;
+    text-decoration: none;
+  }
+  
+  .profile{
+      margin-right: 0;
   }
