--- a/IoT_AutonomousFarm/ui/webApp/css/home.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/home.css
@@ -7,9 +7,9 @@
 }
 
 body {
-    background-color: #080710;
-    background: url(../pics/background.jpg)
-      no-repeat center center fixed;  
+    background-color: #D6CC99;
+    /* background: url(../pics/background.jpg)
+      no-repeat center center fixed;   */
       padding: 20px;
     font-family: 'Lato', sans-serif;
     background-size: cover;
@@ -145,8 +145,8 @@ button {
 a {
     display: block;
     text-align: center;
-    margin-top: 20px; /* Space from the components above */
-    font-size: 14px;
+    /* margin-top: 20px;  */
+    /* font-size: 14px; */
     color: #ffffff;
     text-decoration: none;
 }
@@ -158,7 +158,7 @@ header {
     left: 0;
     width: 100%;
     height: 80px;
-    background: linear-gradient(to right, #1845ad, #23a2f6);
+    background: linear-gradient(to right, #445D48, #001524);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -208,8 +208,11 @@ nav {
   }
   
   .video-container iframe {
-    border: 5px solid #23a2f6; /* Add a border around the iframe */
-    border-radius: 10px; /* Rounded corners */
-    max-width: 80%; /* Ensure the iframe is responsive */
-    max-height: 80vh; /* Prevent the iframe from exceeding the viewport height */
+    border: 5px solid #425b47; 
+    /* border-radius: 10px;  */
+    max-width: 80%; 
+    max-height: 80vh; 
   }
+
+
+  
