--- a/IoT_AutonomousFarm/ui/webApp/css/sensors.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/sensors.css
@@ -31,7 +31,7 @@ header {
 	left: 0;
 	width: 100%;
 	height: 80px;
-	background: linear-gradient(to right, #1845ad, #23a2f6);
+	/* background: linear-gradient(to right, #1845ad, #23a2f6); */
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
