working on the areas

--- a/IoT_AutonomousFarm/ui/webApp/css/sensors.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/sensors.css
@@ -12,9 +12,14 @@ html {
 	font-size: 62.5%; /* Base font size for rem units */
 }
 
+a{
+	color: white;
+    text-decoration: none;
+}
+
 body {
 	padding: 20px;
-	background:  url(../pics/background.jpg)
+	background:  url(../pics/9701.jpg)
 		no-repeat center center fixed;
 	font-family: 'Lato', sans-serif;
 	background-size: cover;
@@ -208,7 +213,7 @@ h6 {
 }
 
 .select-button:hover {
-	background: linear-gradient(45deg, #23a2f6, #1845ad);
+	background: linear-gradient(45deg, #0eaa78, #3d5644);
 	transform: translateY(-2px);
 	box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
 }
@@ -303,7 +308,7 @@ input{
     font-size: 1.4rem;
     font-weight: bold;
     color: #ffffff;
-    background: linear-gradient(45deg, #fd005c, #23a2f6);
+	background: linear-gradient(45deg, #0eaa78, #3d5644);
     border: none;
     border-radius: 8px;
     cursor: pointer;
