--- a/IoT_AutonomousFarm/ui/webApp/css/area.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/area.css
@@ -218,7 +218,7 @@ h6 {
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
-.treshbtn {
+.sensorbtn {
 	background-color: rgba(255, 255, 255, 0.06);
 	-webkit-backdrop-filter: blur(20px);
 	backdrop-filter: blur(20px);
@@ -227,10 +227,25 @@ h6 {
 	padding: 5px 0;
 	position: absolute;
 	left: 10%;
-	top: 165px;
+	top: 230px;
 	border-radius: 5px;
 	outline: none;
 }
+
+.plantsbtn {
+	background-color: rgba(255, 255, 255, 0.06);
+	-webkit-backdrop-filter: blur(20px);
+	backdrop-filter: blur(20px);
+	border: none;
+	width: 80%;
+	padding: 5px 0;
+	position: absolute;
+	left: 10%;
+	top: 300px;
+	border-radius: 5px;
+	outline: none;
+}
+
 
 
 
