--- a/IoT_AutonomousFarm/ui/webApp/css/plants.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/plants.css
@@ -12,9 +12,15 @@ html {
 	font-size: 62.5%; /* Base font size for rem units */
 }
 
+a{
+	color: white;
+    text-decoration: none;
+}
+
+
 body {
 	padding: 20px;
-	background:  url(../pics/background.jpg)
+	background:  url(../pics/9701.jpg)
 		no-repeat center center fixed;
 	font-family: 'Lato', sans-serif;
 	background-size: cover;
@@ -296,7 +302,7 @@ input{
     font-size: 1.4rem;
     font-weight: bold;
     color: #ffffff;
-    background: linear-gradient(45deg, #fd005c, #23a2f6);
+	background: linear-gradient(45deg, #0eaa78, #3d5644);
     border: none;
     border-radius: 8px;
     cursor: pointer;
