--- a/IoT_AutonomousFarm/ui/webApp/css/profile.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/profile.css
@@ -38,14 +38,31 @@ body {
     bottom: -80px;
 }
 
-form {
+#profileForm {
+    /* height: 450px; */
+    width: 400px;
+    background-color: rgba(255, 255, 255, 0.13);
+    margin-top: 20px;
+    /* position: absolute; */
+    /* transform: translate(0%, 30%); */
+    /* top: 50%;
+    left: 50%; */
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+    padding: 50px 35px;
+}
+
+#telegramForm {
     height: 450px;
     width: 400px;
     background-color: rgba(255, 255, 255, 0.13);
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
+    /* position: absolute; */
+    /* transform: translate(0%, 30%); */
+    /* top: 50%;
+    left: 50%; */
+    margin-top: 20px;
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255, 255, 255, 0.1);
@@ -183,3 +200,36 @@ header {
     color: #ffcc00;
     text-decoration: underline;
 }
+
+
+
+
+
+
+
+
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+  }
+  
+  .form-wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  /* form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 250px;
+  } */
+  
+  .separator {
+    width: 2px;
+    background-color: #ddd;
+    margin: 0 20px;
+  }
+  
