--- a/IoT_AutonomousFarm/ui/webApp/css/registerform.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/registerform.css
@@ -27,7 +27,7 @@ body {
 }
 
 .shape:first-child {
-    background: linear-gradient(#1845ad,#23a2f6);
+    background: linear-gradient(#0b212a, #435c48);
     left: -80px;
     top: -80px;
 }
@@ -151,7 +151,7 @@ header {
     left: 0;
     width: 100%;
     height: 80px;
-    background: linear-gradient(to right, #1845ad, #23a2f6);
+    background: linear-gradient(to right, #445D48, #001524);
     display: flex;
     justify-content: space-between;
     align-items: center;
