--- a/IoT_AutonomousFarm/ui/webApp/css/loginform.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/loginform.css
@@ -131,10 +131,11 @@ button {
 }
 
 /* Links */
-a {
+
+#register-link {
     display: block;
     text-align: center;
-    margin-top: 20px; /* Space from the components above */
+    margin-top: 20px;
     font-size: 14px;
     color: #ffffff;
     text-decoration: none;
@@ -142,6 +143,32 @@ a {
 
 #register-link:hover {
     text-decoration: underline;
+}
+
+#home-link {
+    padding: 1rem 2rem 1.15rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: #ebebeb;
+	min-width: 80px;
+}
+
+#home-link a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: inherit;
+  text-align: center;
+  text-decoration: none;
+}
+
+#home-link:hover {
+  background-image: url('https://scottyzen.sirv.com/Images/v/button.png');
+  background-size: 100% 100%;
+  color: #27262c;
+  animation: spring 300ms ease-out;
+  text-shadow: 0 -1px 0 #ef816c;
+  font-weight: bold;
 }
 
 /* Header */
