--- a/IoT_AutonomousFarm/ui/webApp/css/area.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/area.css
@@ -15,17 +15,11 @@ a{
 }
 
 
-html {
-	font-size: 62.5%; /* Base font size for rem units */
-}
-
 body {
 	padding: 20px;
 	background:  url(../pics/9701.jpg)
 		no-repeat center center fixed;
-	font-family: 'Lato', sans-serif;
 	background-size: cover;
-	font-size: 1.6rem;
 	line-height: 1.6;
 	color: #fff;
 	-webkit-font-smoothing: antialiased;
@@ -47,62 +41,7 @@ header {
 	transition: background-color 0.3s ease;
 }
 
-.header-title {
-	font-size: 2.8rem;
-	font-weight: bold;
-	color: #ffffff;
-	text-decoration: none;
-	font-family: 'Poppins', sans-serif;
-	letter-spacing: 1px;
-	height: 31%;
-	display: flex;
-}
 
-.header-user {
-	display: flex;
-	align-items: center;
-}
-
-.header-user #username-display {
-	margin-right: 20px;
-	font-size: 1.6rem;
-	color: #ffffff;
-}
-
-.header-user #my-greenhouses-link {
-	display: block;
-    text-align: center;
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.header-user #my-greenhouses-link:hover {
-	color: #ffcc00;
-	text-decoration: underline;
-}
-
-.header-user #logout-button {
-	padding: 10px 20px;
-	font-size: 1.4rem;
-	font-weight: bold;
-	color: #ffffff;
-	background: linear-gradient(45deg, #1845ad, #23a2f6);
-	border: none;
-	border-radius: 8px;
-	cursor: pointer;
-	transition: all 0.3s ease;
-}
-
-.header-user #logout-button:hover {
-	background: linear-gradient(45deg, #23a2f6, #1845ad);
-	transform: translateY(-2px);
-	box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
-}
-
-.header-user #logout-button:active {
-	transform: translateY(0);
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-}
 
 .dashboard-cards {
 	display: flex;
@@ -125,7 +64,7 @@ header {
 	border-radius: 8px;
 	-webkit-box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
 	box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
-	font-family: "Poppins", sans-serif;
+	/* font-family: "Poppins", sans-serif; */
 }
 
 .card-img {
@@ -162,7 +101,6 @@ h6 {
 
 .primary-text {
 	color: #d5d5d5;
-	font-size: 16px;
 	font-weight: 600;
 	letter-spacing: 0.7px;
 	margin: 5px 0;
@@ -171,7 +109,6 @@ h6 {
 .secondary-text {
 	color: #c0c0c0;
 	font-weight: 400;
-	font-size: 14px;
 	letter-spacing: 1px;
 	margin: 5px 0;
 }
@@ -203,7 +140,6 @@ h6 {
 .select-button {
 	display: inline-block;
 	padding: 10px 20px;
-	font-size: 1.4rem;
 	font-weight: bold;
 	color: #ffffff;
 	background: linear-gradient(45deg, #1845ad, #23a2f6);
@@ -258,36 +194,35 @@ h6 {
 
 /* Modal */
 .modal {
-    display: flex; /* Use flexbox for centering */
-    position: fixed; /* Position the modal relative to the viewport */
+    display: flex; 
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    z-index: 1000; /* Ensure it appears above other elements */
+    background-color: rgba(0, 0, 0, 0.5); 
+    justify-content: center; 
+    align-items: center; 
+    z-index: 1000; 
 }
 
 .modal-content {
-    background: rgba(0, 0, 0, 0.8); /* Dark semi-transparent background */
-    padding: 30px; /* Increase padding for better spacing */
+    background: rgba(0, 0, 0, 0.8); 
+    padding: 30px; 
     border-radius: 10px;
     text-align: center;
-    width: 600px; /* Increase the width */
-    max-width: 90%; /* Ensure it doesn't exceed the screen width */
-    height: auto; /* Allow the height to adjust based on content */
-    max-height: 90%; /* Ensure it doesn't exceed the screen height */
+    width: 600px; 
+    max-width: 90%; 
+    height: auto; 
+    max-height: 90%; 
     color: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
-    overflow-y: auto; /* Add scroll if content overflows vertically */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); 
+    overflow-y: auto; 
 }
 
 .close {
     cursor: pointer;
     color: red;
-    font-size: 18px;
     position: absolute;
     top: 10px;
     right: 20px;
@@ -309,13 +244,12 @@ label{
     margin: 20px;
 }
 input{
-	font-size: 14px;
+	/* font-size: 14px; */
     font-weight: bold;
 }
 
 #add-plant-btn{
 	padding: 10px 20px;
-    font-size: 1.4rem;
     font-weight: bold;
     color: #ffffff;
     background: linear-gradient(45deg, #fd005c, #23a2f6);
@@ -327,7 +261,6 @@ input{
 
 
 #add-plant-btn:hover {
-    /* background: linear-gradient(45deg, #23a2f6, #1845ad); */
     transform: translateY(-2px);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
 }
@@ -335,7 +268,6 @@ input{
 #add-area-btn
 {
 	padding: 10px 20px;
-    font-size: 1.4rem;
     font-weight: bold;
     color: #ffffff;
 	background: linear-gradient(45deg, #0eaa78, #3d5644);
@@ -343,10 +275,11 @@ input{
     border-radius: 8px;
     cursor: pointer;
     transition: all 0.3s ease;
+	margin-top: 75px;
+	font-size: 14px;
 }
 
 #add-area-btn:hover {
-    /* background: linear-gradient(45deg, #23a2f6, #1845ad); */
     transform: translateY(-2px);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
 }
