--- a/IoT_AutonomousFarm/ui/webApp/css/greenhouses.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/greenhouses.css
@@ -1,16 +1,3 @@
-/* General Reset */
-* {
-  box-sizing: border-box;
-}
-
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  font-size: 62.5%; /* Base font size for rem units */
-}
 
 body {
   padding: 20px;
@@ -20,12 +7,11 @@ body {
 
   /* font-family: 'Lato', sans-serif; */
   background-size: cover;
-  font-size: 1.6rem;
+  /* font-size: 1.6rem; */
   line-height: 1.6;
   color: #fff;
   -webkit-font-smoothing: antialiased;
 }
-
 
 /* Main Content */
 main {
@@ -101,7 +87,7 @@ td:before {
 .select-button {
   display: inline-block;
   padding: 10px 20px;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: bold;
   color: #ffffff;
   background: linear-gradient(45deg, #983c2a, #ef816c);
@@ -126,7 +112,7 @@ td:before {
 #AddGreenhouseButton {
   display: inline-block;
   padding: 12px 28px;
-  font-size: 1.6rem;
+  font-size: 14px;
   font-weight: bold;
   color: #fff;
   border: none;
@@ -216,70 +202,6 @@ svg {
   transform: translateX(4px);
 }
 
-
-/* nav style */
-
-ul{
-  display: flex;
-  width: 100%;
-  height: 80vh;
-  margin: auto;
-  max-width: 1000px;
-  justify-content: space-between;
-  text-align: center;
-}
-li {
-  padding: 1rem 2rem 1.15rem;
-  text-transform: uppercase;
-  cursor: pointer;
-  color: #ebebeb;
-  min-width: 80px;
-  margin: auto;
-}
-
-li:hover {
-  background-image: url('https://scottyzen.sirv.com/Images/v/button.png');
-  background-size: 100% 100%;
-  color: #27262c;
-  animation: spring 300ms ease-out;
-  text-shadow: 0 -1px 0 #ef816c;
-  font-weight: bold;
-}
-li:active {
-  transform: translateY(4px);
-}
-
-@keyframes spring {
-  15% {
-    -webkit-transform-origin: center center;
-    -webkit-transform: scale(1.2, 1.1);
-  }
-  40% {
-    -webkit-transform-origin: center center;
-    -webkit-transform: scale(0.95, 0.95);
-  }
-  75% {
-    -webkit-transform-origin: center center;
-    -webkit-transform: scale(1.05, 1);
-  }
-  100% {
-    -webkit-transform-origin: center center;
-    -webkit-transform: scale(1, 1);
-  }
-}
-
-.shameless-plug{
-  position: absolute;
-  bottom: 10px;
-  right: 0;
-  padding: 8px 20px;
-  color: #ccc;
-  text-decoration: none;
-}
-
-.profile{
-    margin-right: 0;
-}
 
 
 .dropdown-menu{
