--- a/IoT_AutonomousFarm/ui/webApp/css/profile.css
+++ b/IoT_AutonomousFarm/ui/webApp/css/profile.css
@@ -71,7 +71,6 @@ body {
 }
 
 form * {
-    font-family: 'Poppins', sans-serif;
     color: #ffffff;
     letter-spacing: 0.5px;
     outline: none;
@@ -164,6 +163,7 @@ button {
   color: inherit;
   text-align: center;
   text-decoration: none;
+  font-size: 16px;
 }
 
 #home-link:hover {
@@ -196,7 +196,6 @@ header {
     font-weight: bold;
     color: #ffffff;
     text-decoration: none;
-    font-family: 'Poppins', sans-serif;
     letter-spacing: 1px;
 }
 
@@ -206,7 +205,6 @@ header {
     margin-left: 30px;
     font-size: 16px;
     font-weight: 500;
-    font-family: 'Poppins', sans-serif;
     transition: color 0.3s ease;
 }
 
