--- a/IoT_AutonomousFarm/ui/webApp/static/css/greenhouses.css
+++ b/IoT_AutonomousFarm/ui/webApp/static/css/greenhouses.css
@@ -28,7 +28,7 @@ table {
 }
 
 thead th {
-  background-color: #344c40;
+  background-color: #121a16;
   color: #fff;
   font-weight: 700;
   text-align: left;
