--- a/IoT_AutonomousFarm/ui/webApp/static/css/profile.css
+++ b/IoT_AutonomousFarm/ui/webApp/static/css/profile.css
@@ -163,7 +163,7 @@ button {
   color: inherit;
   text-align: center;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 26px !important;
 }
 
 #home-link:hover {
